parser/tests/parser/complex/invalid/basic_7.mf2
.foo{:hello}
{{}}
=== spans ===
                    .foo{:hello}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^ 0:0-1:4
QuotedPattern                    ^^^^ 1:0-1:4
Pattern                               0:0-0:0
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..12)
  .foo{:hello}↵{{}}
  ^^^^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..17,
    declarations: [],
    body: QuotedPattern {
        span: @13..17,
        pattern: Pattern {
            parts: [],
        },
    },
}